# coho-engine

./: CMakeLists.txt  README.md  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  implementations.cpp
resources/: noise.wgsl  noiseShader.wgsl  shader.wgsl
sdl2webgpu/: sdl2webgpu.c  sdl2webgpu.h
src/: Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  constants.h  main.cpp
src/ecs/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/ecs/components/: Components.h  InstanceComponent.cpp  InstanceComponent.h  Material.h  MaterialComponent.cpp  MaterialComponent.h  Mesh.h  MeshComponent.cpp  MeshComponent.h  Texture.h  Transform.h  TransformComponent.cpp  TransformComponent.h
src/gpu/: ComputeModule.cpp  ComputeModule.h  RenderModule.cpp  RenderModule.h
src/input/: EventSubscriber.h  InputEvents.h  InputManager.cpp  InputManager.h
src/memory/: BindGroup.h  Buffer.cpp  Buffer.h  Pipeline.h  RenderPass.h  Shader.h
src/noise/: RandomNumberGenerator.h
src/renderer/: ComputeModule.cpp  Renderer.cpp  Renderer.h
src/resources/pipelines/: FullscreenQuad.h  default.h  terrain.h
src/resources/renderpass/: geometry.h  noiseVis.h  skybox.h  terrain.h
src/resources/shaders/: noiseShader.wgsl  terrain.wgsl  vis.wgsl
src/terrain/: Terrain.cpp  Terrain.h  TerrainManager.cpp  TerrainManager.h  TerrainPatch.h
src/utilities/: MeshBuilder.cpp  MeshBuilder.h  VertexDataCalculations.cpp  VertexDataCalculations.h
src/utilities/io/: ExportObj.cpp  ExportObj.h  ExportTexture.cpp  ExportTexture.h
src/utilities/texture/: MippedTexture.h
webgpu/: webgpu.cmake
webgpu/build-wgpu/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  webgpu.sln
webgpu/build-wgpu/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
webgpu/build-wgpu/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
webgpu/build-wgpu/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
webgpu/build-wgpu/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
